[fix] Validator view blocks map UI even when invisible

--- a/src/ts/be/vmm/eenvplus/editor/validation/validator.less
+++ b/src/ts/be/vmm/eenvplus/editor/validation/validator.less
@@ -22,15 +22,10 @@ input[type=number] {
   bottom: unit(@footer-height, px);
   right: 0;
   width: 320px;
-
-  .content {
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    background: white;
-    border-left: 1px solid #bdbdbd;
-    .box-shadow(6px 6px 12px rgba(0, 0, 0, 0.175));
-  }
+  overflow-y: auto;
+  background: white;
+  border-left: 1px solid #bdbdbd;
+  .box-shadow(6px 6px 12px rgba(0, 0, 0, 0.175));
 
   ul {
     padding: 15px;
