--- a/src/ts/be/vmm/eenvplus/state/state.less
+++ b/src/ts/be/vmm/eenvplus/state/state.less
@@ -7,7 +7,8 @@
 .overview .include-in-detail,
 .detail .include-in-overview,
 .feature-selected #pulldown,
-.form-browser {
+.form-browser,
+.validator {
   display: none;
 }
 
@@ -15,7 +16,8 @@
 .view .include-in-view,
 .overview .include-in-overview,
 .detail .include-in-detail,
-.feature-selected .form-browser {
+.feature-selected .form-browser,
+.edit.invalid .validator {
   display: block;
 }
 
